# expense-report-refactoring-python-kata

./: README.md  expense_report.py  pyproject.toml  test_expense_report.py
